--- a/c3/package.json
+++ b/c3/package.json
@@ -1,12 +1,13 @@
 {
-  "homepage": "https://srinijalanda93.github.io/F4C32024",
-  "name": "contest3",
+  "homepage": "https://srinijalanda93.github.io/F4C32020",
+  "name": "c3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
